--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "SlotPureMVC",
+  "name": "GridGame",
   "uuid": "3e393d2e-c4ff-43c0-b9ee-fc1a95e6a309",
   "creator": {
     "version": "3.8.2"
+  },
+  "scripts": {
+    "start": "npx serve -s build"
+  },
+  "dependencies": {
+    "serve": "^14.2.4"
   }
 }
